explore explained variance

--- a/KMeans Clustering.ipynb
+++ b/KMeans Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sagemaker.session.Session object at 0x7fe919b1ef98>\n",
+      "<sagemaker.session.Session object at 0x7f8c997416d8>\n",
       "arn:aws:iam::240038582877:role/service-role/AmazonSageMaker-ExecutionRole-20191028T202433\n"
      ]
     }
@@ -50,18 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<sagemaker.session.Session object at 0x7fe91a566b70>\n",
-      "arn:aws:iam::240038582877:role/service-role/AmazonSageMaker-ExecutionRole-20191028T202433\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load data\n",
     "prefix = 'segmentation'\n",
@@ -72,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +87,7 @@
        "'s3://sagemaker-us-east-2-240038582877/pca/'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,11 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#current features less 1\n",
     "N_COMPONENTS = 94\n",
     "pca = PCA(role=role,\n",
     "          train_instance_count=1,\n",
@@ -210,12 +200,12 @@
     }
    ],
    "source": [
-    "pca.fit(formatted_train_data)"
+    "# pca.fit(formatted_train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +221,7 @@
        "2304"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -259,17 +249,17 @@
      "text": [
       "Collecting mxnet\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/81/f5/d79b5b40735086ff1100c680703e0f3efc830fa455e268e9e96f3c857e93/mxnet-1.6.0-py2.py3-none-any.whl (68.7MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 68.7MB 707kB/s eta 0:00:01\n",
+      "\u001b[K    100% |████████████████████████████████| 68.7MB 743kB/s eta 0:00:01    41% |█████████████▎                  | 28.5MB 36.9MB/s eta 0:00:02\n",
       "\u001b[?25hCollecting graphviz<0.9.0,>=0.8.1 (from mxnet)\n",
       "  Downloading https://files.pythonhosted.org/packages/53/39/4ab213673844e0c004bed8a0781a0721a3f6bb23eb8854ee75c236428892/graphviz-0.8.4-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: requests<3,>=2.20.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from mxnet) (2.20.0)\n",
       "Collecting numpy<2.0.0,>1.16.0 (from mxnet)\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/07/08/a549ba8b061005bb629b76adc000f3caaaf881028b963c2e18f811c6edc1/numpy-1.18.2-cp36-cp36m-manylinux1_x86_64.whl (20.2MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 20.2MB 2.5MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: certifi>=2017.4.17 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from requests<3,>=2.20.0->mxnet) (2019.11.28)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from requests<3,>=2.20.0->mxnet) (1.23)\n",
+      "\u001b[K    100% |████████████████████████████████| 20.2MB 2.6MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: requests<3,>=2.20.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from mxnet) (2.20.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from requests<3,>=2.20.0->mxnet) (2019.11.28)\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from requests<3,>=2.20.0->mxnet) (3.0.4)\n",
       "Requirement already satisfied: idna<2.8,>=2.5 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from requests<3,>=2.20.0->mxnet) (2.6)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from requests<3,>=2.20.0->mxnet) (1.23)\n",
       "\u001b[31mfastai 1.0.60 requires nvidia-ml-py3, which is not installed.\u001b[0m\n",
       "Installing collected packages: graphviz, numpy, mxnet\n",
       "  Found existing installation: numpy 1.15.4\n",
@@ -347,7 +337,7 @@
     }
    ],
    "source": [
-    "#!pip install mxnet\n",
+    "!pip install mxnet\n",
     "import mxnet as mx\n",
     "\n",
     "pca_model_params = mx.ndarray.load('model_algo-1')\n",
@@ -357,13 +347,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               0\n",
+      "89  2.215367e+02\n",
+      "90  3.195273e+02\n",
+      "91  3.378520e+02\n",
+      "92  6.753108e+02\n",
+      "93  2.422030e+07\n"
+     ]
+    }
+   ],
    "source": [
     "#mean - mean subtracted from a component in order to center it\n",
     "#v - makeup of the principal component (same as components_)\n",
-    "# singular values of the components for the PCA transformation, % of variance from the projected future space"
+    "#s - singular values of the components for the PCA transformation, % of variance from the projected future spac\n",
+    "\n",
+    "s = pd.DataFrame(pca_model_params['s'].asnumpy())\n",
+    "v = pd.DataFrame(pca_model_params['v'].asnumpy())\n",
+    "\n",
+    "n_principal_components = 5\n",
+    "\n",
+    "start_idx = N_COMPONENTS - n_principal_components\n",
+    "\n",
+    "# s = s.apply(lambda x: '%.5f' % x, axis=1)\n",
+    "\n",
+    "print(s.iloc[start_idx:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#what is the smallest number or principal comonents that captures at least 80% of the\n",
+    "#total variance in the dataset?\n",
+    "\n",
+    "def explained_variance(s, n_top_components):\n",
+    "#     exp_variance = np.square(s.iloc[start_idx:])\n",
+    "    exp_variance = np.square(s.iloc[start_idx:]).sum() / np.square(s).sum()\n",
+    "    return exp_variance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1.0\n",
+      "dtype: float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_top_components = 1\n",
+    "exp_variance = explained_variance(s, n_top_components)\n",
+    "print(exp_variance)"
    ]
   }
  ],
