explore raw train

--- a/DataPrep.ipynb
+++ b/DataPrep.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# azdias_location = sagemaker_session.upload_data('dataset/scaled_mailout_train.csv', key_prefix=prefix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (19,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "tmp_list = []\n",
     "\n",
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(42962, 95)"
+       "(42833, 367)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -155,22 +155,22 @@
        "      <th>Unnamed: 0</th>\n",
        "      <th>LNR</th>\n",
        "      <th>AGER_TYP</th>\n",
-       "      <th>D19_BANKEN_ANZ_12</th>\n",
-       "      <th>D19_BANKEN_ANZ_24</th>\n",
-       "      <th>D19_BANKEN_DATUM</th>\n",
-       "      <th>D19_BANKEN_DIREKT</th>\n",
-       "      <th>D19_BANKEN_GROSS</th>\n",
-       "      <th>D19_BANKEN_LOKAL</th>\n",
-       "      <th>D19_BANKEN_OFFLINE_DATUM</th>\n",
+       "      <th>AKT_DAT_KL</th>\n",
+       "      <th>ALTER_HH</th>\n",
+       "      <th>ALTER_KIND1</th>\n",
+       "      <th>ALTER_KIND2</th>\n",
+       "      <th>ALTER_KIND3</th>\n",
+       "      <th>ALTER_KIND4</th>\n",
+       "      <th>ALTERSKATEGORIE_FEIN</th>\n",
        "      <th>...</th>\n",
-       "      <th>SEMIO_REL</th>\n",
-       "      <th>SEMIO_SOZ</th>\n",
-       "      <th>SEMIO_TRADV</th>\n",
-       "      <th>SEMIO_VERT</th>\n",
-       "      <th>SHOPPER_TYP</th>\n",
-       "      <th>VERS_TYP</th>\n",
+       "      <th>VHN</th>\n",
+       "      <th>VK_DHT4A</th>\n",
+       "      <th>VK_DISTANZ</th>\n",
+       "      <th>VK_ZG11</th>\n",
+       "      <th>W_KEIT_KIND_HH</th>\n",
+       "      <th>WOHNDAUER_2008</th>\n",
+       "      <th>WOHNLAGE</th>\n",
        "      <th>ZABEOTYP</th>\n",
-       "      <th>RESPONSE</th>\n",
        "      <th>ANREDE_KZ</th>\n",
        "      <th>ALTERSKATEGORIE_GROB</th>\n",
        "    </tr>\n",
@@ -179,168 +179,161 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.020538</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1754</td>\n",
+       "      <td>2</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.375</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.020631</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.428571</td>\n",
+       "      <td>1770</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.250</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.020689</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1465</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.375</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.017006</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1470</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.375</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>0.020771</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1478</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 95 columns</p>\n",
+       "<p>5 rows × 367 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0       LNR  AGER_TYP  D19_BANKEN_ANZ_12  D19_BANKEN_ANZ_24  \\\n",
-       "0           0  0.020538      0.75           0.000000           0.000000   \n",
-       "1           1  0.020631      0.50           0.166667           0.166667   \n",
-       "2           2  0.020689      0.50           0.000000           0.166667   \n",
-       "3           3  0.017006      0.75           0.000000           0.000000   \n",
-       "4           4  0.020771      0.75           0.000000           0.000000   \n",
+       "   Unnamed: 0   LNR  AGER_TYP  AKT_DAT_KL  ALTER_HH  ALTER_KIND1  ALTER_KIND2  \\\n",
+       "0           0  1754         2         1.0       7.0          NaN          NaN   \n",
+       "1           1  1770        -1         1.0       0.0          NaN          NaN   \n",
+       "2           2  1465         2         9.0      16.0          NaN          NaN   \n",
+       "3           3  1470        -1         7.0       0.0          NaN          NaN   \n",
+       "4           4  1478         1         1.0      21.0          NaN          NaN   \n",
        "\n",
-       "   D19_BANKEN_DATUM  D19_BANKEN_DIREKT  D19_BANKEN_GROSS  D19_BANKEN_LOKAL  \\\n",
-       "0          1.000000                0.0               0.0          0.000000   \n",
-       "1          0.444444                0.0               0.0          0.428571   \n",
-       "2          0.666667                0.0               0.0          0.000000   \n",
-       "3          1.000000                0.0               0.0          0.000000   \n",
-       "4          1.000000                0.0               0.0          0.000000   \n",
+       "   ALTER_KIND3  ALTER_KIND4  ALTERSKATEGORIE_FEIN  ...  VHN  VK_DHT4A  \\\n",
+       "0          NaN          NaN                   6.0  ...  4.0       5.0   \n",
+       "1          NaN          NaN                   0.0  ...  1.0       5.0   \n",
+       "2          NaN          NaN                  11.0  ...  3.0       9.0   \n",
+       "3          NaN          NaN                   0.0  ...  2.0       6.0   \n",
+       "4          NaN          NaN                  13.0  ...  1.0       2.0   \n",
        "\n",
-       "   D19_BANKEN_OFFLINE_DATUM  ...  SEMIO_REL  SEMIO_SOZ  SEMIO_TRADV  \\\n",
-       "0                       1.0  ...   0.000000   0.666667     0.000000   \n",
-       "1                       1.0  ...   0.333333   0.000000     0.333333   \n",
-       "2                       1.0  ...   0.666667   0.333333     0.000000   \n",
-       "3                       1.0  ...   0.166667   0.666667     0.333333   \n",
-       "4                       1.0  ...   0.500000   0.833333     0.166667   \n",
+       "   VK_DISTANZ  VK_ZG11  W_KEIT_KIND_HH  WOHNDAUER_2008  WOHNLAGE  ZABEOTYP  \\\n",
+       "0         6.0      3.0             6.0             9.0       3.0         3   \n",
+       "1         2.0      1.0             6.0             9.0       5.0         3   \n",
+       "2         6.0      3.0             2.0             9.0       4.0         3   \n",
+       "3         6.0      3.0             NaN             9.0       2.0         3   \n",
+       "4         4.0      3.0             3.0             9.0       7.0         4   \n",
        "\n",
-       "   SEMIO_VERT  SHOPPER_TYP  VERS_TYP  ZABEOTYP  RESPONSE  ANREDE_KZ  \\\n",
-       "0    0.333333         1.00  1.000000       0.4       0.0        1.0   \n",
-       "1    0.500000         0.75  0.666667       0.0       0.0        1.0   \n",
-       "2    1.000000         1.00  0.666667       0.4       0.0        0.0   \n",
-       "3    0.166667         0.50  1.000000       0.4       0.0        1.0   \n",
-       "4    1.000000         0.50  0.666667       0.4       0.0        0.0   \n",
+       "  ANREDE_KZ ALTERSKATEGORIE_GROB  \n",
+       "0         1                    4  \n",
+       "1         1                    4  \n",
+       "2         2                    4  \n",
+       "3         2                    4  \n",
+       "4         2                    4  \n",
        "\n",
-       "   ALTERSKATEGORIE_GROB  \n",
-       "0                 0.375  \n",
-       "1                 0.250  \n",
-       "2                 0.375  \n",
-       "3                 0.375  \n",
-       "4                 0.250  \n",
-       "\n",
-       "[5 rows x 95 columns]"
+       "[5 rows x 367 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
